Fixed logo spacing -GH

--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ body {
 	color: #333;
 	letter-spacing: -1px;
 	text-align: left;
-	padding: 25px 0px 0px 20px;
+	padding: 25px 0px 0px 17px;
 	text-decoration: none;
 	position: relative;
 	vertical-align: middle;
